tests/baselines/reference/overload1.errors.txt
overload1.ts(27,5): error TS2322: Type 'C' is not assignable to type 'string'.
overload1.ts(29,1): error TS2322: Type 'number' is not assignable to type 'string'.
overload1.ts(31,11): error TS2554: Expected 1-2 arguments, but got 3.
overload1.ts(32,5): error TS2554: Expected 1-2 arguments, but got 0.
overload1.ts(33,1): error TS2322: Type 'C' is not assignable to type 'string'.
overload1.ts(34,5): error TS2769: No overload matches this call.
  Overload 1 of 2, '(s1: string, s2: number): string', gave the following error.
    Argument of type 'number' is not assignable to parameter of type 'string'.
  Overload 2 of 2, '(s1: number, s2: string): number', gave the following error.
    Argument of type 'number' is not assignable to parameter of type 'string'.


==== overload1.ts (6 errors) ====
    module O {
        export class A {
            
        }
    
        export class B extends A {
        }
    
        export class C extends B {
            
        }
    
        export interface I {
            f(s:string):number;
            f(n:number):string;
            g(n1:number,n2:number):number;
            g(n:number):string;
            g(a:A):C;
            g(c:C):string;
            h(s1:string,s2:number):string;
            h(s1:number,s2:string):number;
        }
    }
    
    declare var x:O.I;
    
    var e:string=x.g(new O.A()); // matches overload but bad assignment
        ~
!!! error TS2322: Type 'C' is not assignable to type 'string'.
    var y:string=x.f(3); // good
    y=x.f("nope"); // can't assign number to string
    ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    var z:string=x.g(x.g(3,3)); // good
    z=x.g(2,2,2); // no match
              ~
!!! error TS2554: Expected 1-2 arguments, but got 3.
    z=x.g(); // no match
        ~
!!! error TS2554: Expected 1-2 arguments, but got 0.
!!! related TS6210 overload1.ts:17:11: An argument for 'n' was not provided.
    z=x.g(new O.B()); // ambiguous (up and down conversion)
    ~
!!! error TS2322: Type 'C' is not assignable to type 'string'.
    z=x.h(2,2); // no match
        ~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(s1: string, s2: number): string', gave the following error.
!!! error TS2769:     Argument of type 'number' is not assignable to parameter of type 'string'.
!!! error TS2769:   Overload 2 of 2, '(s1: number, s2: string): number', gave the following error.
!!! error TS2769:     Argument of type 'number' is not assignable to parameter of type 'string'.
    z=x.h("hello",0); // good
    
    var v=x.g;
    
    